--- a/Friendship.html
+++ b/Friendship.html
@@ -12,7 +12,7 @@
     <li><a href="#">Contact</a></li>
   </ul>
 
-<img src="Big Bang Theory.jpg" alt="Big Bang Theory image">
+<img class="background" src="Big Bang Theory.jpg" alt="Big Bang Theory image">
   
 <h1>Friendship Algorithm</h1>
   
@@ -21,8 +21,19 @@
 
 <button id="startAlgorithm">Begin Friendship Algorithm</button>
 
-<!-- Popup box beginning the algorithm-->
+<!-- Popup box beginning the algorithm
 <div class="questions">Frienship Algorithm</div>
+-->
+
+
+<!--Footer with Icons to Github and LinkedIn Profile-->
+<footer>
+  <ul class="iconsList">
+    <li> <a href="https://github.com/AllenK1083/WatevaMelon" target="_blank"> <img src="Github Icon.png" class="icons" id="githubIcon"></a></li>
+    <li> <a href="https://www.linkedin.com/in/allen-kwok-1772831bb/" target="_blank"><img src="LinkedIn Icon.png" class="icons" id="linkedinIcon"></a></li>
+    <li> <a href="https://www.hackerrank.com/AllenKwok?hr_r=1" target="_blank"><img src="HackerRank Icon.png" class="icons" id="linkedinIcon"></a></li>
+  </ul>
+</footer>
 
 </body>
 </html>
