--- a/Index.html
+++ b/Index.html
@@ -12,19 +12,8 @@
     <li><a href="#">Contact</a></li>
   </ul>
 
-<img class="background" src="Big Bang Theory.jpg" alt="Big Bang Theory image">
-  
-<h1>Friendship Algorithm</h1>
-  
-<!-- Insert Clip of Big Bang Theory Friendship Algorith -->
-<video class="friendshipVideo" controls src= ""></video>
 
-<button id="startAlgorithm">Begin Friendship Algorithm</button>
-
-<!-- Popup box beginning the algorithm
-<div class="questions">Frienship Algorithm</div>
--->
-
+</body>
 
 <!--Footer with Icons to Github and LinkedIn Profile-->
 <footer>
