--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Friendship Algorithm</title>
-  <link rel="stylesheet" type="text/css" href="style.css"> 
-</head>
-<body>
-  <ul class="navbar">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
+  <head>
+    <title>Allen Kwok</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+  </head>
+  <body>
+    <ul class="navbar">
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
 
-
-</body>
 
 <!--Footer with Icons to Github and LinkedIn Profile-->
-<footer>
-  <ul class="iconsList">
-    <li> <a href="https://github.com/AllenK1083/WatevaMelon" target="_blank"> <img src="Github Icon.png" class="icons" id="githubIcon"></a></li>
-    <li> <a href="https://www.linkedin.com/in/allen-kwok-1772831bb/" target="_blank"><img src="LinkedIn Icon.png" class="icons" id="linkedinIcon"></a></li>
-    <li> <a href="https://www.hackerrank.com/AllenKwok?hr_r=1" target="_blank"><img src="HackerRank Icon.png" class="icons" id="hackerrankIcon"></a></li>
-    <li> <a href="https://www.codingame.com/profile/cb5ed29f3c4699bdf7fc01432a87caa85048905" target="_blank"><img src="Codingame Icon.png" class="icons" id="codingameIcon"></a></li>
-  </ul>
-</footer>
-
-</body>
+    <footer>
+      <ul class="iconsList">
+        <li> <a href="https://github.com/AllenK1083/WatevaMelon" target="_blank"> <img src="Github Icon.png" class="icons" id="githubIcon"></a></li>
+        <li> <a href="https://www.linkedin.com/in/allen-kwok-1772831bb/" target="_blank"><img src="LinkedIn Icon.png" class="icons" id="linkedinIcon"></a></li>
+        <li> <a href="https://www.hackerrank.com/AllenKwok?hr_r=1" target="_blank"><img src="HackerRank Icon.png" class="icons" id="hackerrankIcon"></a></li>
+        <li> <a href="https://www.codingame.com/profile/cb5ed29f3c4699bdf7fc01432a87caa85048905" target="_blank"><img src="Codingame Icon.png" class="icons" id="codingameIcon"></a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
